# libinput-config

./: LICENSE  README.md  meson.build  meson_options.txt  preload.sh
scripts/: preload.sh  profile.fish.in  unpreload.sh
src/: config.h  hook-gestures.c  hook-init.c  hook-keyboard.c  hook-pointer.c  hook.c  keyfile.c  keyfile.h  keymap.c  keymap.h  main.c  override.c  override.h  workaround.h
src/hooks/: init.c  keyboard.c
